<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.place_details.PlaceDetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_place_details" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_placeDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView_name"
                        style="@style/TextAppearance.MaterialComponents.Headline4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_activity_horizontal"
                        android:layout_marginTop="@dimen/margin_activity_vertical"
                        android:layout_marginEnd="@dimen/margin_activity_horizontal"
                        android:textColor="@color/colorTextPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Coffee and Code" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView_timestamp"
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_activity_horizontal"
                        android:layout_marginTop="@dimen/margin_interElement_vertical"
                        android:layout_marginEnd="@dimen/margin_activity_horizontal"
                        android:textColor="@color/colorTextSecondary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView_name"
                        tools:text="13 January 2018, 5:30 PM" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView_comment"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_activity_horizontal"
                        android:layout_marginTop="@dimen/margin_interSection_vertical"
                        android:layout_marginEnd="@dimen/margin_activity_horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView_timestamp"
                        tools:text="Yeah, sure, I mean, if you spend all day shuffling words around, you can make anything sound bad. That's because losers look stuff up while the rest of us are carp'en all them 'diems. That just sounds like slavery with extra steps. You know who's into dragons, Morty? Nerds who refuse to admit they're Christian. Ooohhh can do." />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView_coordinates"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_activity_horizontal"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="@id/button_copyCoordinates"
                        app:layout_constraintEnd_toStartOf="@id/button_copyCoordinates"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/button_copyCoordinates"
                        tools:text="37.4219983N, -122.084E" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/button_copyCoordinates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_interSection_vertical"
                        android:layout_marginEnd="@dimen/margin_activity_horizontal"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView_comment"
                        app:srcCompat="@drawable/ic_copy" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_activity_horizontal"
                android:layout_marginTop="@dimen/margin_interSection_vertical"
                android:layout_marginEnd="@dimen/margin_activity_horizontal"
                android:layout_marginBottom="@dimen/margin_activity_vertical"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_openInMap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_interElement_horizontal"
                    android:layout_weight="1"
                    android:text="@string/label_openInMap"
                    app:backgroundTint="@color/colorOpenMap" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_interElement_horizontal"
                    android:layout_weight="1"
                    android:text="@string/label_delete"
                    app:backgroundTint="@color/colorDelete" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
